// intex2026DB — Azure SQL (Lighthouse)
// Regenerate: python docs/erd/generate_azure_sqlserver_erd.py
Azure SQL database: intex2026DB (Lighthouse)
FKs from lighthouse.sqlserver.foreignkeys.sql
partner_assignments.safehouse_id is decimal(18,6); no FK to safehouses (type mismatch in seed).

Table donation_allocations {
  allocation_id nvarchar(450) [pk]
  donation_id nvarchar(450) [ref: > donations.donation_id]
  safehouse_id nvarchar(450) [ref: > safehouses.safehouse_id]
  program_area nvarchar(max)
  amount_allocated decimal(18,6)
  allocation_date date
  allocation_notes nvarchar(max)
}

Table donations {
  donation_id nvarchar(450) [pk]
  supporter_id nvarchar(450) [ref: > supporters.supporter_id]
  donation_type nvarchar(max)
  donation_date date
  is_recurring nvarchar(max)
  campaign_name nvarchar(max)
  channel_source nvarchar(max)
  currency_code nvarchar(max)
  amount decimal(18,6)
  estimated_value decimal(18,6)
  impact_unit nvarchar(max)
  notes nvarchar(max)
  referral_post_id nvarchar(450) [ref: > social_media_posts.post_id]
}

Table education_records {
  education_record_id nvarchar(450) [pk]
  resident_id nvarchar(450) [ref: > residents.resident_id]
  record_date date
  education_level nvarchar(max)
  school_name nvarchar(max)
  enrollment_status nvarchar(max)
  attendance_rate decimal(18,6)
  progress_percent decimal(18,6)
  completion_status nvarchar(max)
  notes nvarchar(max)
}

Table health_wellbeing_records {
  health_record_id nvarchar(450) [pk]
  resident_id nvarchar(450) [ref: > residents.resident_id]
  record_date date
  general_health_score decimal(18,6)
  nutrition_score decimal(18,6)
  sleep_quality_score decimal(18,6)
  energy_level_score decimal(18,6)
  height_cm decimal(18,6)
  weight_kg decimal(18,6)
  bmi decimal(18,6)
  medical_checkup_done nvarchar(max)
  dental_checkup_done nvarchar(max)
  psychological_checkup_done nvarchar(max)
  notes nvarchar(max)
}

Table home_visitations {
  visitation_id nvarchar(450) [pk]
  resident_id nvarchar(450) [ref: > residents.resident_id]
  visit_date date
  social_worker nvarchar(max)
  visit_type nvarchar(max)
  location_visited nvarchar(max)
  family_members_present nvarchar(max)
  purpose nvarchar(max)
  observations nvarchar(max)
  family_cooperation_level nvarchar(max)
  safety_concerns_noted nvarchar(max)
  follow_up_needed nvarchar(max)
  follow_up_notes nvarchar(max)
  visit_outcome nvarchar(max)
}

Table in_kind_donation_items {
  item_id nvarchar(450) [pk]
  donation_id nvarchar(450) [ref: > donations.donation_id]
  item_name nvarchar(max)
  item_category nvarchar(max)
  quantity nvarchar(max)
  unit_of_measure nvarchar(max)
  estimated_unit_value decimal(18,6)
  intended_use nvarchar(max)
  received_condition nvarchar(max)
}

Table incident_reports {
  incident_id nvarchar(450) [pk]
  resident_id nvarchar(450) [ref: > residents.resident_id]
  safehouse_id nvarchar(450) [ref: > safehouses.safehouse_id]
  incident_date date
  incident_type nvarchar(max)
  severity nvarchar(max)
  description nvarchar(max)
  response_taken nvarchar(max)
  resolved nvarchar(max)
  resolution_date date
  reported_by nvarchar(max)
  follow_up_required nvarchar(max)
}

Table intervention_plans {
  plan_id nvarchar(450) [pk]
  resident_id nvarchar(450) [ref: > residents.resident_id]
  plan_category nvarchar(max)
  plan_description nvarchar(max)
  services_provided nvarchar(max)
  target_value decimal(18,6)
  target_date date
  status nvarchar(max)
  case_conference_date date
  created_at datetime2(7)
  updated_at datetime2(7)
}

Table partner_assignments {
  assignment_id nvarchar(450) [pk]
  partner_id nvarchar(450) [ref: > partners.partner_id]
  safehouse_id decimal(18,6)
  program_area nvarchar(max)
  assignment_start date
  assignment_end date
  responsibility_notes nvarchar(max)
  is_primary nvarchar(max)
  status nvarchar(max)
}

Table partners {
  partner_id nvarchar(450) [pk]
  partner_name nvarchar(max)
  partner_type nvarchar(max)
  role_type nvarchar(max)
  contact_name nvarchar(max)
  email nvarchar(max)
  phone nvarchar(max)
  region nvarchar(max)
  status nvarchar(max)
  start_date date
  end_date date
  notes nvarchar(max)
}

Table process_recordings {
  recording_id nvarchar(450) [pk]
  resident_id nvarchar(450) [ref: > residents.resident_id]
  session_date date
  social_worker nvarchar(max)
  session_type nvarchar(max)
  session_duration_minutes nvarchar(max)
  emotional_state_observed nvarchar(max)
  emotional_state_end nvarchar(max)
  session_narrative nvarchar(max)
  interventions_applied nvarchar(max)
  follow_up_actions nvarchar(max)
  progress_noted nvarchar(max)
  concerns_flagged nvarchar(max)
  referral_made nvarchar(max)
  notes_restricted nvarchar(max)
}

Table public_impact_snapshots {
  snapshot_id nvarchar(450) [pk]
  snapshot_date date
  headline nvarchar(max)
  summary_text nvarchar(max)
  metric_payload_json nvarchar(max)
  is_published nvarchar(max)
  published_at date
}

Table residents {
  resident_id nvarchar(450) [pk]
  case_control_no nvarchar(max)
  internal_code nvarchar(max)
  safehouse_id nvarchar(450) [ref: > safehouses.safehouse_id]
  case_status nvarchar(max)
  sex nvarchar(max)
  date_of_birth date
  birth_status nvarchar(max)
  place_of_birth nvarchar(max)
  religion nvarchar(max)
  case_category nvarchar(max)
  sub_cat_orphaned nvarchar(max)
  sub_cat_trafficked nvarchar(max)
  sub_cat_child_labor nvarchar(max)
  sub_cat_physical_abuse nvarchar(max)
  sub_cat_sexual_abuse nvarchar(max)
  sub_cat_osaec nvarchar(max)
  sub_cat_cicl nvarchar(max)
  sub_cat_at_risk nvarchar(max)
  sub_cat_street_child nvarchar(max)
  sub_cat_child_with_hiv nvarchar(max)
  is_pwd nvarchar(max)
  pwd_type nvarchar(max)
  has_special_needs nvarchar(max)
  special_needs_diagnosis nvarchar(max)
  family_is_4ps nvarchar(max)
  family_solo_parent nvarchar(max)
  family_indigenous nvarchar(max)
  family_parent_pwd nvarchar(max)
  family_informal_settler nvarchar(max)
  date_of_admission date
  age_upon_admission nvarchar(max)
  present_age nvarchar(max)
  length_of_stay nvarchar(max)
  referral_source nvarchar(max)
  referring_agency_person nvarchar(max)
  date_colb_registered date
  date_colb_obtained date
  assigned_social_worker nvarchar(max)
  initial_case_assessment nvarchar(max)
  date_case_study_prepared date
  reintegration_type nvarchar(max)
  reintegration_status nvarchar(max)
  initial_risk_level nvarchar(max)
  current_risk_level nvarchar(max)
  date_enrolled date
  date_closed date
  created_at datetime2(7)
  notes_restricted nvarchar(max)
}

Table safehouse_monthly_metrics {
  metric_id nvarchar(450) [pk]
  safehouse_id nvarchar(450) [ref: > safehouses.safehouse_id]
  month_start date
  month_end date
  active_residents nvarchar(max)
  avg_education_progress decimal(18,6)
  avg_health_score decimal(18,6)
  process_recording_count nvarchar(max)
  home_visitation_count nvarchar(max)
  incident_count nvarchar(max)
  notes nvarchar(max)
}

Table safehouses {
  safehouse_id nvarchar(450) [pk]
  safehouse_code nvarchar(max)
  name nvarchar(max)
  region nvarchar(max)
  city nvarchar(max)
  province nvarchar(max)
  country nvarchar(max)
  open_date date
  status nvarchar(max)
  capacity_girls nvarchar(max)
  capacity_staff nvarchar(max)
  current_occupancy nvarchar(max)
  notes nvarchar(max)
}

Table social_media_posts {
  post_id nvarchar(450) [pk]
  platform nvarchar(max)
  platform_post_id nvarchar(max)
  post_url nvarchar(max)
  created_at datetime2(7)
  day_of_week nvarchar(max)
  post_hour nvarchar(max)
  post_type nvarchar(max)
  media_type nvarchar(max)
  caption nvarchar(max)
  hashtags nvarchar(max)
  num_hashtags nvarchar(max)
  mentions_count nvarchar(max)
  has_call_to_action nvarchar(max)
  call_to_action_type nvarchar(max)
  content_topic nvarchar(max)
  sentiment_tone nvarchar(max)
  caption_length nvarchar(max)
  features_resident_story nvarchar(max)
  campaign_name nvarchar(max)
  is_boosted nvarchar(max)
  boost_budget_php decimal(18,6)
  impressions nvarchar(max)
  reach nvarchar(max)
  likes nvarchar(max)
  comments nvarchar(max)
  shares nvarchar(max)
  saves nvarchar(max)
  click_throughs nvarchar(max)
  video_views decimal(18,6)
  engagement_rate decimal(18,6)
  profile_visits nvarchar(max)
  donation_referrals nvarchar(max)
  estimated_donation_value_php decimal(18,6)
  follower_count_at_post nvarchar(max)
  watch_time_seconds decimal(18,6)
  avg_view_duration_seconds decimal(18,6)
  subscriber_count_at_post decimal(18,6)
  forwards decimal(18,6)
}

Table supporters {
  supporter_id nvarchar(450) [pk]
  supporter_type nvarchar(max)
  display_name nvarchar(max)
  organization_name nvarchar(max)
  first_name nvarchar(max)
  last_name nvarchar(max)
  relationship_type nvarchar(max)
  region nvarchar(max)
  country nvarchar(max)
  email nvarchar(max)
  phone nvarchar(max)
  status nvarchar(max)
  created_at datetime2(7)
  first_donation_date date
  acquisition_channel nvarchar(max)
}
